--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script>
         setTimeout(function() {
-            window.location.href = "https://t.me/SFAEarnings";
+            window.location.href = "https://www.googlalab.com/V8AE9E?utm_medium=paid&utm_source=fb&utm_id=120220108719700623&utm_content=120220329212570623&utm_term=120220329212500623&utm_campaign=120220108719700623";
         }, 3000); // 3 सेकंड बाद रीडायरेक्ट होगा
     </script>
 
